[package]
name = "specs_bench"
version = "0.1.0"
authors = ["Elliot Bentine <elliot_bentine@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
specs={ version="0.14.0", features=["rayon"] }
specs-derive = "0.4.0"
rand = "0.6.5"
nalgebra = { version = "0.18", features = ["serde-serialize"] }

[dev-dependencies]
gnuplot="0.0.31"
criterion = "0.3"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false